# lidar_camera_data_collect

./: README.md  package.xml
data/lidar/: lidar1708597696.100718.pcd  lidar1708597696.201766.pcd  lidar1708597696.401855.pcd  lidar1708597696.600798.pcd  lidar1708597696.700777.pcd  lidar1708597696.802054.pcd  lidar1708597696.900861.pcd  lidar1708597697.000753.pcd  lidar1708597697.101805.pcd  lidar1708597697.201870.pcd  lidar1708597697.301887.pcd  lidar1708597697.401809.pcd  lidar1708597697.501752.pcd  lidar1708597697.601746.pcd  lidar1708597697.701936.pcd  lidar1708597697.801913.pcd  lidar1708597697.900897.pcd  lidar1708597698.001826.pcd  lidar1708597698.102044.pcd  lidar1708597698.201805.pcd  lidar1708597698.300503.pcd  lidar1708597698.400453.pcd  lidar1708597698.501896.pcd  lidar1708597698.601843.pcd  lidar1708597698.701830.pcd  lidar1708597698.800901.pcd  lidar1708597698.901830.pcd  lidar1708597699.001909.pcd  lidar1708597699.101821.pcd  lidar1708597699.200834.pcd  lidar1708597699.300406.pcd  lidar1708597699.401920.pcd  lidar1708597699.500835.pcd  lidar1708597699.601945.pcd  lidar1708597699.701927.pcd  lidar1708597699.801825.pcd  lidar1708597699.901983.pcd  lidar1708597700.001921.pcd  lidar1708597700.101907.pcd  lidar1708597700.200794.pcd  (+68 more)
lidar_camera_sync/: CMakeLists.txt
lidar_camera_sync/launch/: point_cloud.launch
lidar_camera_sync/msg/: LidarCameraPointCloud.msg
lidar_camera_sync/src/: lidar_camera_sync_node.cpp  pcl_write.cpp
livox_ros_driver2/config/: MID360_config.json  display_point_cloud_ROS1.rviz
livox_ros_driver2/launch_ROS1/: msg_MID360.launch
realsense-ros-ros1-legacy/realsense2_camera/rviz/: pointcloud.rviz
src/: image_pointcloud_sync.cpp
