<?xml version="1.0"?>
<package format="2">
  <name>lidar_camera_sync</name>
  <version>0.0.1</version>
  <description>The lidar_camera_sync package</description>

  <!-- Maintainer Information -->
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>
  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>PCL</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>tf2_ros</build_depend>

  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>PCL</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
  </export>

  <!-- Message Definitions -->
  <!-- <message_generation plugin="ros" generate_messages="true">
    <depends>sensor_msgs</depends>
  </message_generation> -->
</package>